# workshop-bdd-python

./: pyproject.toml
features/: environment.py  tests.feature
features/steps/: steps_menu.py
src/demo_bdd/: bill.py  menu.py
tests/: test_demo_bdd.py
