[tool.poetry]
name = "demo-bdd"
version = "0.1.0"
description = ""
authors = ["Sergio Gómez <decano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-sugar = "^0.9.5"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.19.0"
behave = "^1.2.6"
black = {version = "^22.6.0", allow-prereleases = true}
mypy = {version = "^0.971", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
